# libmed-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_c_compiler_version7cxx_compiler_version7fortran_compiler_version7python3.6.____73_pypy.yaml  linux_64_c_compiler_version7cxx_compiler_version7fortran_compiler_version7python3.6.____cpython.yaml  linux_64_c_compiler_version7cxx_compiler_version7fortran_compiler_version7python3.7.____cpython.yaml  linux_64_c_compiler_version7cxx_compiler_version7fortran_compiler_version7python3.8.____cpython.yaml  linux_64_c_compiler_version7cxx_compiler_version7fortran_compiler_version7python3.9.____cpython.yaml  linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.6.____73_pypy.yaml  linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.6.____cpython.yaml  linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.7.____cpython.yaml  linux_64_c_compiler_version9cxx_compiler_version9fortran_compiler_version9python3.9.____cpython.yaml  linux_64_hdf51.10.3python3.8.____73_pypy.yaml  linux_64_hdf51.10.3python3.9.____73_pypy.yaml  linux_64_hdf51.10.5python3.8.____73_pypy.yaml  linux_64_hdf51.10.5python3.9.____73_pypy.yaml  linux_64_hdf51.10.6python3.8.____73_pypy.yaml  linux_64_hdf51.10.6python3.9.____73_pypy.yaml  linux_64_hdf51.12.2python3.10.____cpython.yaml  linux_64_hdf51.12.2python3.7.____cpython.yaml  linux_64_hdf51.12.2python3.8.____cpython.yaml  linux_64_hdf51.12.2python3.9.____cpython.yaml  linux_64_hdf51.14.3mpimpichpython3.11.____cpython.yaml  linux_64_hdf51.14.3mpimpichpython3.12.____cpython.yaml  linux_64_hdf51.14.3mpimpichpython3.13.____cp313.yaml  linux_64_hdf51.14.3mpimpichpython3.9.____cpython.yaml  linux_64_hdf51.14.3mpinompipython3.11.____cpython.yaml  linux_64_hdf51.14.3mpinompipython3.12.____cpython.yaml  linux_64_hdf51.14.3mpinompipython3.13.____cp313.yaml  linux_64_hdf51.14.4mpimpichpython3.10.____cpython.yaml  linux_64_hdf51.14.4mpimpichpython3.11.____cpython.yaml  linux_64_hdf51.14.4mpimpichpython3.12.____cpython.yaml  linux_64_hdf51.14.4mpimpichpython3.13.____cp313.yaml  linux_64_hdf51.14.4mpimpichpython3.9.____cpython.yaml  linux_64_hdf51.14.4mpinompipython3.10.____cpython.yaml  linux_64_hdf51.14.4mpinompipython3.11.____cpython.yaml  linux_64_hdf51.14.4mpinompipython3.12.____cpython.yaml  linux_64_hdf51.14.4mpinompipython3.13.____cp313.yaml  linux_64_hdf51.14.4mpinompipython3.9.____cpython.yaml  linux_64_hdf51.14.4mpiopenmpipython3.10.____cpython.yaml  linux_64_hdf51.14.4mpiopenmpipython3.11.____cpython.yaml  linux_64_hdf51.14.4mpiopenmpipython3.12.____cpython.yaml  linux_64_hdf51.14.4mpiopenmpipython3.13.____cp313.yaml  (+333 more)
recipe/tests/fortran/: CMakeLists.txt  test_field.f  test_file_ops.f  test_mesh.f
(+21 files in other folders)
